# Aegis

./: LICENSE
aegis_core/: Cargo.toml
aegis_core/src/: lib.rs
aegis_core/src/engine/errors/: auth.rs  cryptograpy_errors.rs  mod.rs
aegis_core/src/engine/structs/: derive_credentials.rs  login.rs  mod.rs  user.rs
aegis_core/src/test/: derive_credentials_test.rs  mod.rs
aegis_tui/: Cargo.toml
aegis_tui/src/: main.rs
aegis_tui/src/models/: login_result.rs  mod.rs
aegis_tui/src/pages/: login_page.rs
