[package]
name = "aegis_core"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.0", features = ["zeroize_derive"] }
